--- a/index.html
+++ b/index.html
@@ -284,5 +284,16 @@
     
     <div id="results"></div>
     <script src="script.js"></script>
+    <script type="text/javascript">
+var currentTime = new Date()
+var hours = currentTime.getHours()
+var minutes = currentTime.getMinutes()
+
+if (minutes < 10){
+  minutes = "0" + minutes;
+}
+
+console.log("User time is " + hours + ":" + minutes);
+</script>
 </body>
 </html>
