--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
         <option value="lb">Leroy and Beethoven</option>
         <option value="laurel">Laurel</option>
         <option value="chestnut">Chestnut</option>
-        <option value="murray">Murray</option>
+        <option value="lm">Leroy and Murray</option>
         <option value="rf">Riverside and Front</option>
     </optgroup>
     <optgroup label="Main Street">
@@ -87,6 +87,7 @@
         <option value="clarke">Clarke</option>
         <option value="cedar">Cedar</option>
         <option value="arthur">Arthur</option>
+        <option value="mm">Main and Murray</option>
         <option value="mather">Mather</option>
     </optgroup>
     <optgroup label="Downtown Binghamton">
@@ -198,7 +199,7 @@
         <option value="lb">Leroy and Beethoven</option>
         <option value="laurel">Laurel</option>
         <option value="chestnut">Chestnut</option>
-        <option value="murray">Murray</option>
+        <option value="lm">Leroy and Murray</option>
         <option value="rf">Riverside and Front</option>
     </optgroup>
     <optgroup label="Main Street">
@@ -219,6 +220,7 @@
         <option value="clarke">Clarke</option>
         <option value="cedar">Cedar</option>
         <option value="arthur">Arthur</option>
+        <option value="mm">Main and Murray</option>
         <option value="mather">Mather</option>
     </optgroup>
     <optgroup label="Downtown Binghamton">
