--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
     <optgroup label="Campus">
             <!--Non CS + Overlap-->
             <option value="union">Union</option>
+            <option value="rafuse">Rafuse</option>
             <option value="pf">Physical Facilities</option>
             <option value="bha">Bunn Hill Access</option>
             <option value="mohawk">Mohawk</option>
@@ -87,7 +88,6 @@
         <option value="clarke">Clarke</option>
         <option value="cedar">Cedar</option>
         <option value="arthur">Arthur</option>
-        <option value="mm">Main and Murray</option>
         <option value="mather">Mather</option>
     </optgroup>
     <optgroup label="Downtown Binghamton">
@@ -160,6 +160,7 @@
     <optgroup label="Campus">
             <!--Non CS + Overlap-->
             <option value="union">Union</option>
+            <option value="rafuse">Rafuse</option>
             <option value="pf">Physical Facilities</option>
             <option value="bha">Bunn Hill Access</option>
             <option value="mohawk">Mohawk</option>
