--- a/index.html
+++ b/index.html
@@ -3,11 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>OCCT Route Planner</title>
+    <title>OCCT Route Guide</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1><img src="https://occtransport.s3.amazonaws.com/Logos/OCC+Transport+Logo.png" alt="OCCT"> Route Planner</h1>
+    <h1><img src="https://occtransport.s3.amazonaws.com/Logos/OCC+Transport+Logo.png" alt="OCCT"> Route Guide</h1>
     <label for="starting">Choose a starting location:</label>
     <select id="starting">
     <option value="" selected>Select starting location...</option>
