--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 </head>
 <body>
     <h1><img src="https://occtransport.s3.amazonaws.com/Logos/OCC+Transport+Logo.png" alt="OCCT"> Route Guide</h1>
+    <h2>Working on fixing late nite info...sorry!</h2>
     <label for="starting">Choose a starting location:</label>
     <select id="starting">
     <option value="" selected>Select starting location...</option>
