--- a/index.html
+++ b/index.html
@@ -294,5 +294,8 @@
         console.log("User time is " + hours + ":" + minutes);
     </script>
     <script src="script.js"></script>
+    <script>
+        lateNiteCheck();
+    </script>
 </body>
 </html>
